<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <ImageView android:id="@+id/iv_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon_blank_photo"
            android:background="@android:color/transparent"
            android:layout_gravity="center"/>
        
    </LinearLayout>
	<LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
	    <Button android:id="@+id/btn_signup"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="20dp"
	        android:text="@string/btn_signup"/>
	    <Button android:id="@+id/btn_signin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="20dp"
	        android:text="@string/btn_signin"/>	    
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView android:id="@+id/tv_devicelist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            android:text="@string/title_devicelist"           
            android:textColor="@android:color/primary_text_light" 
            />
        <ListView android:id="@+id/lv_devices"
            android:layout_width="300dp"
            android:layout_height="300dp"
            ></ListView>
    </LinearLayout>
</LinearLayout>
