<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg"
     >
    <LinearLayout android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button android:id="@+id/btn_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_day"
            android:textSize="22sp"
            android:padding="20dp"
            android:background="@color/transparent"
            />
        <Button android:id="@+id/btn_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_week"
            android:textSize="22sp"
             android:padding="20dp"
            android:background="@color/transparent"
            />
        <Button android:id="@+id/btn_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_month"
            android:textSize="22sp"
             android:padding="20dp"
            android:background="@color/transparent"
            />
        
    </LinearLayout>
	<!-- <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bc_statistics"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
         />  -->
         <ListView android:id="@+id/lv_charts"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
           android:layout_below="@id/ll_1"
             android:layout_marginTop="20dp"       
             android:dividerHeight="20dp"
             ></ListView>
       
</RelativeLayout>
